Fix #15954 - Export Maximal length of created query input too small

--- a/themes/bootstrap/scss/_common.scss
+++ b/themes/bootstrap/scss/_common.scss
@@ -176,10 +176,6 @@ select {
 }
 
 input {
-  &[type=number] {
-    width: 50px;
-  }
-
   &[type=text],
   &[type=password],
   &[type=number],
