--- a/themes/pmahomme/scss/_common.scss
+++ b/themes/pmahomme/scss/_common.scss
@@ -181,10 +181,6 @@ select {
 }
 
 input {
-  &[type=number] {
-    width: 50px;
-  }
-
   &[type=text],
   &[type=password],
   &[type=number],
